<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/orange"
            android:id="@+id/orangeLogo"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sobre_nos"
            android:layout_below="@id/orangeLogo"
            android:layout_alignParentLeft="true"
            android:textSize="22dp"
            android:textColor="#FF9800"
            android:id="@+id/ttlSobre"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@id/ttlSobre"
            android:id="@+id/txtSobre"
            android:textSize="18dp"
            android:textColor="#000"
            android:text="@string/texto_sobre_nos"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fale_conosco"
            android:layout_below="@id/txtSobre"
            android:layout_alignParentLeft="true"
            android:textSize="22dp"
            android:textColor="#FF9800"
            android:id="@+id/ttlFale"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_below="@id/ttlFale"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:id="@+id/lbNome"
            android:text="@string/nome"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNome"
            android:layout_below="@id/lbNome"
            android:inputType="text"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_below="@id/edtNome"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:id="@+id/lbEmail"
            android:text="@string/e_mail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_below="@id/lbEmail"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_below="@id/edtEmail"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:id="@+id/lbAssunto"
            android:text="@string/assunto"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtAssunto"
            android:inputType="text"
            android:breakStrategy="simple"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/lbAssunto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_below="@id/edtAssunto"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:id="@+id/lbMensagem"
            android:text="@string/mensagem"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMensagem"
            android:inputType="textMultiLine"
            android:breakStrategy="simple"
            android:layout_below="@id/lbMensagem"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="#FF9800"
            android:text="Enviar"
            android:textColor="#fff"
            android:onClick="sendEmail"
            android:layout_below="@id/edtMensagem"/>
    </RelativeLayout>
</ScrollView>

